# Cackle-submission

./: .gitmodules  README.md
cackle-cache/: Cargo.toml
cackle-cache/proto/: cackle_cache.proto
cackle-cache/src/: starling-cache.rs
cackle-coordinator/: Cargo.toml  build.rs
cackle-coordinator/queries/: q10.query_data  q11.query_data  q12.query_data  q13.query_data  q14.query_data  q15.query_data  q16.query_data  q17.query_data  q18.query_data  q19.query_data  q2.query_data  q20.query_data  q21.query_data  q22.query_data  q3.query_data  q4.query_data  q5.query_data  q6.query_data  q7.query_data  q8.query_data  q9.query_data
cackle-coordinator/src/: allocator.rs  main.rs
cackle-coordinator/workloads/: 3600,10,1000,128,1,20,1200,0.3,1,102400.0,False,False.queries  3600,10,1500,128,1,20,1200,0.3,1,102400.0,False,False.queries  3600,10,250,128,1,20,1200,0.3,1,102400.0,False,False.queries  3600,10,500,128,1,20,1200,0.3,1,102400.0,False,False.queries  3600,10,60,128,1,20,1200,0.3,1,102400.0,False,False.queries  3600,10,750,128,1,20,1200,0.3,1,102400.0,False,False.queries
cackle-model/: compute_model.py  shuffle_model_and_workload_gen.py  work_delaying_compute.py
cackle-starling/: CMakeLists.txt
cackle-starling/gen_skeleton/: base_table_scan_aggregate.template  base_table_scan_partition.template  broadcast_join_base_table.template  combine_task.template  combine_task_header.template  combine_task_launch.template  combiner.template  combiner_header.template  common.py  compressed_outputs.template  cpp.template  final_aggregate.template  final_aggregate_header.template  generate.py  header.template  partitioned_hash_join.template  partitioned_hash_join_aggregate.template  partitioned_hash_join_aggregate_header.template  partitioned_hash_join_header.template  process_deps.py  q1.json  q10.json  q11.json  q12.json  q13.json  q14.json  q15.json  q16.json  q17.json  q18.json  q19.json  q2.json  q20.json  q21.json  q22.json  q3.json  q4.json  q5.json  q6.json  q7.json  (+11 more)
cackle-starling/py/: exec-caller.py
cackle-starling/queries/: qjoinagg-big.sql  qscanagg-big.sql
cackle-starling/src/: AllQueries.cpp  CMakeLists.txt  MyCacheClient.cpp  QueryExecutor.cpp  S3Client.cpp  S3FileInputStream.cpp
cackle-starling/src/include/: MyCacheClient.h  QueryExecutor.h  S3Client.h  S3FileInputStream.h
databricks-experiment/: Cargo.toml
databricks-experiment/queries/: q10.sql  q11.sql  q13.sql  q14.sql  q15.sql  q18.sql  q2.sql  q21.sql  q3.sql  q6.sql  q9.sql
databricks-experiment/src/: main.rs
