[package]
name = "cackle-cache"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "cackle-cache"
path = "src/cackle-cache.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1"}
tonic = "0.8.3"
prost = "0.11"
bytes = "1"
parse-size = "1"
deepsize = "0.2.0"

[build-dependencies]
tonic-build = "0.8.3"
