[package]
name = "cackle-coordinator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
aws-config = "0.15.0"
aws-sdk-lambda = "0.15.0"
aws-sdk-ec2 = "0.15.0"
aws-sdk-s3 = "0.15.0"
futures = "0.3"
thread-id = "4.0"
tokio = { version = "1", features = ["full"] }
async-recursion = "1.0"
rand = "0.8"
tonic = "0.8.3"
prost = "0.11"
stats-cli = "3.0.1"

[build-dependencies]
tonic-build = "0.8.3"
