[package]
name = "databricks-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
futures = "0.3"
thread-id = "4.0"
tokio = { version = "1", features = ["full"] }
odbc-api = { version = "0.54.2", features = ["odbc_version_3_5"] }
rand = "0.8"
env_logger = "0.10.0"
csv = "1.2.0"
anyhow = "1.0.69"

